# burrows-wheeler

./: CMakeLists.txt  README.md  driver.cpp
data/: 1.in  2.in  3.in
engines/: CMakeLists.txt  bwt.cpp  bwt.h  engines.h  huffman.cpp  huffman.h  movetofront.cpp  movetofront.h  types.h
utils/: CMakeLists.txt  argparse.cpp  argparse.h  string_utils.cpp  string_utils.h  timer.cpp  timer.h  utils.h
